fixed z-indexes

--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -130,6 +130,7 @@
         align-items: center;
         margin: 10px;
         padding: 20px 40px 40px;
+        z-index: 100;
 
         border-radius: 15px;
         background: #0166D4;
@@ -157,6 +158,7 @@
         border-radius: 15px;
         background: #0166D4;
         box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.15) inset;
+        z-index: 100;
 
         h1 {
             margin-bottom: 20px;
