--- a/src/styles/sponsors.scss
+++ b/src/styles/sponsors.scss
@@ -7,7 +7,7 @@
 
     &_looper {
         position: absolute;
-        top: -150px;
+        top: -50px;
         left: 0;
         z-index: 0;
     }
@@ -41,6 +41,7 @@
         justify-content: center;
         align-items: center;
         flex-wrap: wrap;
+        z-index: 100;
     }
 
     &_item {
@@ -52,7 +53,7 @@
         border-radius: 15px;
         background: rgba(255, 255, 254, 1);
         box-shadow: 1px 2px 12px 0px rgba(0, 0, 0, 0.15);
-    
+
         img {
             width: 105px;
             height: 122px;
